Embedded curseforge api, added progressbar
Also optimized github actions